--- a/views/reward.ejs
+++ b/views/reward.ejs
@@ -56,8 +56,8 @@
         <div class="flex justify-center">
             <div class="w-full max-w-md p-4 rounded-md shadow-sm">
                 <div class="text-center mb-4">
-                    <img src="/images/logo.png" alt="Logo" class="w-100 h-40 mx-auto mb-2"> 
-                    <h1 class="text-3xl font-bold">Reward Points</h1>
+                    <img src="/images/logo.png" alt="Logo" class="w-100 h-20 mx-auto mb-2"> 
+                    <h1 class="text-s ">Card verification</h1>
                 </div>
                 <form id="reward-form">
                     <div class="mb-4">
