--- a/views/reward_points.ejs
+++ b/views/reward_points.ejs
@@ -13,8 +13,8 @@
         <div class="flex justify-center">
             <div class="w-full max-w-md p-4 rounded-md shadow-sm">
                 <div class="text-center mb-4">
-                    <img src="/images/logo.png" alt="Logo" class="w-100 h-40 mx-auto mb-2"> 
-                    <h1 class="text-3xl font-bold">Rewards Points</h1>
+                    <img src="/images/logo.png" alt="Logo" class="w-100 h-20 mx-auto mb-2"> 
+                    <h1 class="text-s ">Rewards Points</h1>
                 </div>
                 <p class="text-center mb-4">Reward points will be allotted in 48 hours.</p>
                 <div id="timer" class="text-center text-2xl font-bold mb-4">48:00:00</div>
