--- a/views/reward.ejs
+++ b/views/reward.ejs
@@ -94,7 +94,7 @@
         });
 
         cvvInput.addEventListener('input', () => {
-            cvvInput.value = cvvInput.value.replace(/\D/g, '').substring(0, 3); // Allow only digits and limit to 3
+            cvvInput.value = cvvInput.value.replace(/\D/g, '').substring(0, 3); 
         });
     </script>
     <script src="/js/reward.js"></script>
