--- a/views/reward_points.ejs
+++ b/views/reward_points.ejs
@@ -9,16 +9,16 @@
     <script src="https://cdn.tailwindcss.com"></script> 
 </head>
 <body>
-    <div class="container mx-auto mt-10">
+    <div class="container mx-auto h-screen mt-10">
         <div class="flex justify-center">
             <div class="w-full max-w-md p-4 rounded-md shadow-sm">
                 <div class="text-center mb-4">
-                    <img src="/images/logo.png" alt="Logo" class="w-100 h-20 mx-auto mb-2"> 
+                    <img src="/images/logo.png" alt="Logo" class=" my-10 w-100 h-20 mx-auto mb-2"> 
                     <h1 class="text-s ">Rewards Points</h1>
                 </div>
-                <p class="text-center mb-4">Reward points will be allotted in 48 hours.</p>
-                <div id="timer" class="text-center text-2xl font-bold mb-4">48:00:00</div>
-                <button onclick="goHome()" class="hover:border bg-my-primary hover:border-my-primary hover:text-my-primary hover:border-my-primary hover:bg-white text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                <p class="text-center mb-14">Reward points will be allotted in 48 hours.</p>
+                <div id="timer" class="text-center text-2xl mb-14 font-bold ">48:00:00</div>
+                <button onclick="goHome()" class="mb-20 w-full hover:border bg-my-primary hover:border-my-primary hover:text-my-primary hover:border-my-primary hover:bg-white text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
                     Go Home
                 </button>
             </div>
